--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 .App {
-  text-align: center;
+  position: absolute;
+  top: 40vh;
+  left: 40vw;
+}
+button{
+  margin: 12px;
+  padding: 6px 12px;
 }
 
 .App-logo {
